--- a/Clothes_Web/index.html
+++ b/Clothes_Web/index.html
@@ -1,45 +1,53 @@
 <!DOCTYPE html>
+<html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>XiyouLinuxGroup</title>
-
+    <style>
+        @import "style/test.css";
+    </style>
 </head>
 <body >
-    <div class="test">
-        <div style="position: absolute; width: 100%; height: 100%; z-index: -1 ">
+    <div class="global">
+        <div  class="bg_img">
             <img src="background.jpg"  width="100%" height="100%">
         </div>
         <div >
             <form id="my-form">
-                <div>
-                    <label>
-                            姓名:<input type="text" size="20"><br/>
-                    </label>
-                    <label>
-                            手机号：<input type="text" size="20"><br/>
-                    </label>
-                    <label >
-                            尺寸:
+                    <div class="name">
+                        <label>姓&nbsp;&nbsp;&nbsp;&nbsp;名：</label>
+                        <input type="text" size="20">
+                        <br/>
+                    </div>
+                    <div class="tele_number">
+                        <label>手机号：</label>
+                        <input type="text" size="20">
+                        <br/>
+                    </div>
+                    <div class="address">
+                        <label>地&nbsp;&nbsp;&nbsp;&nbsp;址：</label>
+                        <input type="text" size="20">
+                    </div>
+                    <div class="size">
+                        <label >尺&nbsp;&nbsp;&nbsp;&nbsp;寸：</label>
                         <select>
                             <option value="150">150</option>
                             <option value="155">155</option>
                             <option value="160">160</option>
                         </select>
-                    </label>
-                </div>
-                <div>
+                    </div>
+                <div class="style">
                     <label >
                         样式一：
-                        <input name="style_1" type="checkbox" value="样式一" /><img src="style_1_f.jpg" height="300" width="300"><img src="style_1_b.jpg"  height="300" width="300"><br/>
                     </label>
-                    样式二：
-                    <label>
-                        <input name="style_2" type="checkbox" value="样式二" /><img src="style_2_f.jpg" height="300" width="300" ><img src="style_2_b.jpg" height="300" width="300"><br/>
-                    </label>
+                    <input name="style_1" type="checkbox" value="样式一" /><img src="style_1_f.jpg" height="300" width="300"><img src="style_1_b.jpg"  height="300" width="300"><br/>
+                    <label>样式二：
+                        </label>
+                    <input name="style_2" type="checkbox" value="样式二" /><img src="style_2_f.jpg" height="300" width="300" ><img src="style_2_b.jpg" height="300" width="300"><br/>
                 </div>
-                <div style="text-align: center">
+                <div class="conform">
                     <button type="submit">提交</button>
-                    <button id="reset" type="button">重置</button>
+                    <button id="reset" type="reset">重置</button>
                 </div>
             </form>
         </div>
