--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Bootstrap 模板</title>
+      <title>XiyouLinuxGroup</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
       <link href="css/bootstrap.min.css" rel="stylesheet">
    </head>
@@ -28,9 +28,16 @@
 						<input id="inputAddress" type="text" name="address"/>
 					</div>
 				</div>
+				<div class="control-group" style="margin-left: 45%">
+					<label class="control-label"  style="margin-top: 10px">性&nbsp;&nbsp;别：</label>
+					<select name="style">
+						<option value="1" >男</option>
+						<option value="2" >女</option>
+					</select>
+				</div>
 				<div>
 					<div class="control-group" style="margin-left: 45%">
-					 <label class="control-label" for="inputAddress" style="margin-top: 10px">尺寸：</label>
+					 <label class="control-label" for="inputAddress" style="margin-top: 10px">尺&nbsp;&nbsp;寸：</label>
 						<select  name="size">
 							<option value="150" >150</option>
 							<option value="155" >155</option>
@@ -40,12 +47,13 @@
 					</div>
 				</div>
 				<div class="control-group" style="margin-left: 45%">
-					 <label class="control-label"  style="margin-top: 10px">样式：</label>
+					 <label class="control-label"  style="margin-top: 10px">样&nbsp;&nbsp;式：</label>
 					<select name="style">
 						<option value="1" >样式一</option>
 						<option value="2" >样式二</option>
 					</select>
 				</div>
+
 				<div class="container-fluid" style="margin-left: 38%">
 					<div class="row-fluid">
 						<div class="span12">
