--- a/bootstrap/test.html
+++ b/bootstrap/test.html
@@ -2,9 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <title>XiyouLinuxGroup</title>
 </head>
 <body>
-
+<div class="container-fluid">
+    <div class="row-fluid">
+        <div class="span12">
+            <div class="row-fluid">
+                <div class="span8">
+                    <img alt="140x140" src="img/a.jpg" />
+                </div>
+                <div class="span4">
+                    <img alt="140x140" src="img/a.jpg" />
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
