--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body background="image/background.jpg">
-<div style="margin-top: 5%;">
+<body background="image/backgroud.jpg">
+<div style="margin-top: 2px;">
     <div class="row-fluid">
         <div class="span12">
             <form class="form-horizontal" action="" method="get">
