--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -9,7 +9,7 @@
 <div style="margin-top: 2px;">
     <div class="row-fluid">
         <div class="span12">
-            <form class="form-horizontal" action="" method="get">
+            <form class="form-horizontal" action="add.php" method="get">
                 <div class="control-group" style="margin-left:45%">
                     <label class="control-label" for="inputName">姓名：</label>
                     <div class="controls" style="margin-top: 5px">
