--- a/bootstrap/bootstrap.html
+++ b/bootstrap/bootstrap.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <title>XiyouLinuxGroup</title>
 </head>
+<style type="text/css">
+    .myBox{
+        width: 200px;
+        height: 100px;
+        border: 1px  solid #c7254e ;
+        margin-top: 10px;
+        margin-left: 15px;
+    }
+</style>
 <body>
 
 </body>
