--- a/Clothes_Web/mook.html
+++ b/Clothes_Web/mook.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="style/mook.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
+ <div class="box1">这是盒子1的内容</div>
+ <div class="box2">这是盒子二的内容</div>
+ <div class="box3"></div>
 </body>
 </html>
