--- a/imook/index.html
+++ b/imook/index.html
@@ -29,7 +29,7 @@
         <div class="nav_mid">
             <div class="nav_mid_lef">
                 <ul>
-                    <li><a href="#">首页</a></li>
+                    <li><a href="#">首页t</a></li>
                     <li><a href="list.html">关于穆克</a></li>
                     <li><a href="list.html">新闻动态</a></li>
                     <li><a href="list.html">课程中心</a></li>
