--- a/imook/index.html
+++ b/imook/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html>
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html lang="en">
-<head>
+<head>9--
     <meta charset="UTF-8">
     <title>DreamChasinger</title>
     <link href="css/main.css " rel="stylesheet" type="text/css"/>
@@ -27,9 +28,9 @@
     <div class="nav">
         <div class="nav_left"></div>
         <div class="nav_mid">
-            <div class="nav_mid_lef">
+            <div class="nav_mid_left">
                 <ul>
-                    <li><a href="#">首页t</a></li>
+                    <li><a href="list.html">首页</a></li>
                     <li><a href="list.html">关于穆克</a></li>
                     <li><a href="list.html">新闻动态</a></li>
                     <li><a href="list.html">课程中心</a></li>
@@ -39,7 +40,7 @@
             </div>
             <div class="nav_mid_right">
                 <form action="" method="post">
-                    <input type="text"/>
+                    <input type="text" class="search_test"/>
                 </form>
             </div>
         </div>
