--- a/Clothes_Web/index.html
+++ b/Clothes_Web/index.html
@@ -15,7 +15,7 @@
         <div >
             <form id="my-form">
                     <div class="name">
-                        <label>姓&nbsp;&nbsp;&nbsp;&nbsp;名：</label>
+                        <label>姓&nbsp;&nbsp;&nbsp;&nbsp;名：</label><br/>
                         <input type="text" size="20">
                         <br/>
                     </div>
