将页面作部分改变

--- a/ClothesCount/index.html
+++ b/ClothesCount/index.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div class="control-group" style="margin-left: 45%">
-                    <label class="control-label" for="inputAddress" style="margin-top: 10px">联系地址：</label>
+                    <label class="control-label" for="inputAddress" style="margin-top: 10px">详细联系地址：</label>
                     <div class="controls" style="margin-top: 5px">
                         <input id="inputAddress" type="text" name="address"/>
                     </div>
@@ -46,16 +46,25 @@
                         </select>
                     </div>
                 </div>
-                <div class="control-group" style="margin-left: 45%">
-                    <label class="control-label" style="margin-top: 10px">样&nbsp;&nbsp;式：</label>
-                    <select name="design">
-                        <option value="1">样式一(白)</option>
-                        <option value="2">样式二(黑)</option>
+                <div class="control-group" style="margin-left: 45%" >
+                    <label class="control-label" style="margin-top: 10px">样式一数量：</label>
+                    <select name="design_1">
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
                     </select>
                 </div>
-                <div class="control-group" style="margin-left:45%">
-                    <label class="control-label" style="margin-top: 10px">数&nbsp;&nbsp;量：</label>
-                    <input id="inputNumber" type="text" name="number" size="5"/>
+                <div class="control-group" style="margin-left: 45%">
+                    <label class="control-label" style="margin-top: 10px">样式二数量：</label>
+                    <select name="design_2">
+                        <option value="0">0</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                    </select>
                 </div>
                 <div class="container-fluid" style="margin-left: 37%">
                     <div class="row-fluid">
