--- a/imook/index.html
+++ b/imook/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>DreamChasinger</title>
     <link href="css/main.css " rel="stylesheet" type="text/css"/>
+    <script src="js/myfocus-2.0.1.min.js" type="test/javascript"></script>
+    <script src=js/mf-pattern/mF type="text/javascript"
 </head>
 <body>
 <div class="top">
