--- a/imook/exercise-1.html
+++ b/imook/exercise-1.html
@@ -1,10 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta charset="UTF-8">
-	<title>Title</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=gb2312" />
+	<title>3.1页面头部制作练习题</title>
+	<style type="text/css">
+		/*在此定义相关样式，控制列表的显示形式*/
+		.all li{
+			float: left;
+			list-style-type: none;
+			margin-left: 20px;
+		}
+		.all a:link,.all a:visited{
+			text-decoration: none;
+			color: black;
+		}
+		.all a:hover,.all a:active{
+			text-decoration: none;
+			color: #FFFFFF;
+			background-color: #e22961;
+			size: 20px;
+			display: block;
+		}
+	</style>
 </head>
+
 <body>
+<h3>课程难度</h3>
+<!--在此制作一个无序列表-->
+<div class="all">
+	<ul>
+		<li><a href="#">全部</a></li>
+		<li><a href="#">初级</a></li>
+		<li><a href="#">中级</a></li>
+		<li><a href="#">高级</a></li>
+	</ul>
+</div>
+
+
 
 </body>
 </html>
