--- a/ClothesCount/index.html
+++ b/ClothesCount/index.html
@@ -89,6 +89,16 @@
                     <div style="margin-top: 10px;margin-left: 187px">
                         <label>样式二</label>
                     </div>
+                    <div>
+                        <label>号码参照：</label><br/>
+                        <label>&nbsp;&nbsp;女款：李映霄:L(白),XXL(黑) &nbsp;&nbsp;潘璐:XL&nbsp;&nbsp;何杏：M(男款)</label><br/>
+                        <label>&nbsp;&nbsp;男款：高朴：M &nbsp;&nbsp;刘瑜琀：L&nbsp;&nbsp;李林翰：XL&nbsp;&nbsp;王伟豪：XL&nbsp;&nbsp;</label>
+                        </pre>
+                    </div>
+                    <div class="inform" style="font-size: 18px;color: #c7254e;">
+                    <label>衣服50元/件，请转至支付宝:15829001320(大鲜橙子)</label>
+                        <br/><label style="margin-left: 10%">转账时记着写好备注呦!</label>
+                    </div>
                 </div>
                 <div style="margin-top: 15px;margin-left: 44%">
                     <button class="btn btn-success" type="submit">提交</button>
