--- a/ClothesCount/index.html
+++ b/ClothesCount/index.html
@@ -23,7 +23,7 @@
                     </div>
                 </div>
                 <div class="control-group" style="margin-left: 45%">
-                    <label class="control-label" for="inputAddress" style="margin-top: 10px">详细联系地址：</label>
+                    <label class="control-label" for="inputAddress" style="margin-top: 10px">联系地址(邮递衣服用)：</label>
                     <div class="controls" style="margin-top: 5px">
                         <input id="inputAddress" type="text" name="address"/>
                     </div>
@@ -93,7 +93,6 @@
                         <label>号码参照：</label><br/>
                         <label>&nbsp;&nbsp;女款：李映霄:L(白),XXL(黑) &nbsp;&nbsp;潘璐:XL&nbsp;&nbsp;何杏：M(男款)</label><br/>
                         <label>&nbsp;&nbsp;男款：高朴：M &nbsp;&nbsp;刘瑜琀：L&nbsp;&nbsp;李林翰：XL&nbsp;&nbsp;王伟豪：XL&nbsp;&nbsp;</label>
-                        </pre>
                     </div>
                     <div class="inform" style="font-size: 18px;color: #c7254e;">
                     <label>衣服50元/件，请转至支付宝:15829001320(大鲜橙子)</label>
@@ -102,7 +101,7 @@
                 </div>
                 <div style="margin-top: 15px;margin-left: 44%">
                     <button class="btn btn-success" type="submit">提交</button>
-                    <button class="btn btn-danger" type="reset" style="margin-left: 60px;">重置</button>
+                    <button class="btn btn-danger" type="reset" style="margin-left: 60px;">清空</button>
                 </div>
             </form>
         </div>
