--- a/ClothesCount/reset.html
+++ b/ClothesCount/reset.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>XiyouLinuxGroup</title>
+    <title>信息重置</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -9,7 +9,7 @@
 <div style="margin-top: 2px;">
     <div class="row-fluid">
         <div class="span12">
-            <form class="form-horizontal" action="add.php" method="post">
+            <form class="form-horizontal" action="modify.php" method="post">
                 <div class="control-group" style="margin-left:45%">
                     <label class="control-label" for="inputName">姓名：</label>
                     <div class="controls" style="margin-top: 5px">
@@ -101,7 +101,7 @@
                 </div>
                 <div style="margin-top: 15px;margin-left: 44%">
                     <button class="btn btn-success" type="submit">提交</button>
-                    <button class="btn btn-danger" type="reset" style="margin-left: 60px;">重置</button>
+                    <button class="btn btn-danger" type="reset" style="margin-left: 60px;">清空</button>
                 </div>
             </form>
         </div>
