--- a/ClothesCount/reset.html
+++ b/ClothesCount/reset.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8">
     <link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body background="image/backgroud.jpg">
+<body background="image/backgroud4.jpg">
 <div style="margin-top: 2px;">
     <div class="row-fluid">
         <div class="span12">
