--- a/ClothesCount/index.html
+++ b/ClothesCount/index.html
@@ -91,8 +91,8 @@
                     </div>
                     <div>
                         <label>号码参照：</label><br/>
-                        <label>&nbsp;&nbsp;女款：李映霄:L(白),XXL(黑) &nbsp;&nbsp;潘璐:XL&nbsp;&nbsp;何杏：M(男款)</label><br/>
-                        <label>&nbsp;&nbsp;男款：高朴：M &nbsp;&nbsp;刘瑜琀：L&nbsp;&nbsp;李林翰：XL&nbsp;&nbsp;王伟豪：XL&nbsp;&nbsp;</label>
+                        <label>&nbsp;&nbsp;女款：李映霄(155):L(白),XXL(黑) &nbsp;&nbsp;潘璐(165):XL&nbsp;&nbsp;何杏(166)：M(男款)</label><br/>
+                        <label>&nbsp;&nbsp;男款：高朴(171)：M &nbsp;&nbsp;刘瑜琀(173)：L&nbsp;&nbsp;李林翰(174)：XL&nbsp;&nbsp;王伟豪(185)：XL&nbsp;&nbsp;</label>
                     </div>
                     <div class="inform" style="font-size: 18px;color: #c7254e;">
                     <label>衣服50元/件，请转至支付宝:15829001320(大鲜橙子)</label>
@@ -104,6 +104,10 @@
                     <button class="btn btn-danger" type="reset" style="margin-left: 60px;">清空</button>
                 </div>
             </form>
+                <div style="margin-top: 15px;margin-left: 42%">
+                    <a href="lookup.php"><button class="btn btn-info">查看已订信息</button></a>
+                </div>
+                <div style=""></div>
         </div>
     </div>
 </div>
