--- a/ClothesCount/index.html
+++ b/ClothesCount/index.html
@@ -106,8 +106,8 @@
             </form>
                 <div style="margin-top: 15px;margin-left: 42%">
                     <a href="lookup.php"><button class="btn btn-info">查看已订信息</button></a>
+                    <a href="reset.html"><button class="btn btn-info">重置已订信息</button></a>
                 </div>
-                <div style=""></div>
         </div>
     </div>
 </div>
