--- a/ClothesCount/reset.html
+++ b/ClothesCount/reset.html
@@ -11,6 +11,12 @@
         <div class="span12">
             <form class="form-horizontal" action="modify.php" method="post">
                 <div class="control-group" style="margin-left:45%">
+                    <label class="control-label" for="inputName">订购ID(可在<a href="lookup.php">已订信息</a>里查到)：</label>
+                    <div class="controls" style="margin-top: 5px">
+                        <input id="input_id" type="text" name="id"/>
+                    </div>
+                </div>
+                <div class="control-group" style="margin-left:45%">
                     <label class="control-label" for="inputName">姓名：</label>
                     <div class="controls" style="margin-top: 5px">
                         <input id="inputName" type="text" name="name"/>
@@ -88,11 +94,6 @@
                     </div>
                     <div style="margin-top: 10px;margin-left: 187px">
                         <label>样式二</label>
-                    </div>
-                    <div>
-                        <label>号码参照：</label><br/>
-                        <label>&nbsp;&nbsp;女款：李映霄:L(白),XXL(黑) &nbsp;&nbsp;潘璐:XL&nbsp;&nbsp;何杏：M(男款)</label><br/>
-                        <label>&nbsp;&nbsp;男款：高朴：M &nbsp;&nbsp;刘瑜琀：L&nbsp;&nbsp;李林翰：XL&nbsp;&nbsp;王伟豪：XL&nbsp;&nbsp;</label>
                     </div>
                     <div class="inform" style="font-size: 18px;color: #c7254e;">
                         <label>衣服50元/件，请转至支付宝:15829001320(大鲜橙子)</label>
