--- a/Movie_Web/index.html
+++ b/Movie_Web/index.html
@@ -13,7 +13,10 @@
 		<div class="bottom">
 			<div class="left">
 				<div class="type">
-					<span><img src="" class="can_select" align="middle"/></span>
+					<span class="can_select"><img src="image/1.jpg"  align="middle"  >可选座位</span>
+					<span class="al_select"><img src="image/1.jpg"  align="middle">已选座位</span>
+					<span class="un_select"><img src="image/1.jpg"  align="middle">不可选座位</span>
+					<span  class="fix_select"><img src="image/1.jpg" align="middle">维修中座位</span>
 				</div>
 				<div class="seat"></div>
 			</div>
