去除主健约束

--- a/ClothesCount/index.html
+++ b/ClothesCount/index.html
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div class="control-group" style="margin-left: 45%" >
-                    <label class="control-label" style="margin-top: 10px">样式一数量：</label>
+                    <label class="control-label" style="margin-top: 10px">样式一(白)数量：</label>
                     <select name="design_1">
                         <option value="0">0</option>
                         <option value="1">1</option>
@@ -57,7 +57,7 @@
                     </select>
                 </div>
                 <div class="control-group" style="margin-left: 45%">
-                    <label class="control-label" style="margin-top: 10px">样式二数量：</label>
+                    <label class="control-label" style="margin-top: 10px">样式二(黑)数量：</label>
                     <select name="design_2">
                         <option value="0">0</option>
                         <option value="1">1</option>
@@ -89,8 +89,19 @@
                     <div style="margin-top: 10px;margin-left: 187px">
                         <label>样式二</label>
                     </div>
+                    <div class="row-fluid">
+                        <div class="span12">
+                            <img src="image/size_1.jpg" class="img-rounded" width="500" height="500"
+                                 style="margin-top: 10px;margin-right: 20px"/><br/>
+                            <img src="image/size_2.jpg" class="img-rounded" width="500" height="500"
+                                 style="margin-top: 10px"/><br/>
+                        </div>
+                    </div>
+                    <div style="margin-top: 10px;margin-left: 187px">
+                        <label>尺码对照表</label>
+                    </div>
                     <div>
-                        <label>号码参照：</label><br/>
+                        <label>号码参照(以下面尺码为准)：</label><br/>
                         <label>&nbsp;&nbsp;女款：李映霄(155):L(白),XXL(黑) &nbsp;&nbsp;潘璐(165):XL&nbsp;&nbsp;何杏(166)：M(男款)</label><br/>
                         <label>&nbsp;&nbsp;男款：高朴(171)：M &nbsp;&nbsp;刘瑜琀(173)：L&nbsp;&nbsp;李林翰(174)：XL&nbsp;&nbsp;王伟豪(185)：XL&nbsp;&nbsp;</label>
                     </div>
