--- a/Movie_Web/index.html
+++ b/Movie_Web/index.html
@@ -6,25 +6,163 @@
 	<link href="css/select_seat.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-	<div class="top">
-		<div class="title">
-			<h1>选座</h1>
-		</div>
-		<div class="bottom">
-			<div class="left">
-				<div class="type">
-					<span class="can_select"><img src="image/1.jpg"  align="middle"  >可选座位</span>
-					<span class="al_select"><img src="image/1.jpg"  align="middle">已选座位</span>
-					<span class="un_select"><img src="image/1.jpg"  align="middle">不可选座位</span>
-					<span  class="fix_select"><img src="image/1.jpg" align="middle">维修中座位</span>
-				</div>
-				<div class="seat"></div>
+<div class="top">
+	<div class="title">
+		<h1>选座</h1>
+	</div>
+	<div class="bottom">
+		<div class="left">
+			<div class="type">
+				<span class="can_select"><img src="image/1.jpg" align="middle">可选座位</span>
+				<span class="al_select"><img src="image/2.jpg" align="middle">已选座位</span>
+				<span class="un_select"><img src="image/3.jpg" align="middle">不可选座位</span>
+				<span class="fix_select"><img src="image/4.jpg" align="middle">维修中座位</span>
 			</div>
-			<div class="right">
-				<div class="info"></div>
-				<div class="bye"></div>
+			<div>
+				<p>大屏幕</p>
+				<img src="image/screen.png" style="height: 40px;width: 280px;">
+			</div>
+			<div class="seat">
+				<table>
+					<tr>
+						<td></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+						<td><img src="image/1.jpg"></td>
+					</tr>
+				</table>
+			</div>
+		</div>
+		<div class="right">
+			<div class="info">
+				<div class="image"><img src="image/movie.jpg"></div>
+				<div class="instruct">
+					<p>大黑鲨</p>
+					<p>语言版本：英语 3D 中文字幕</p>
+					<p>时长：1小时23分</p>
+					<p>类型：冒险，动作</p>
+				</div>
+				<div class="address">
+					<p>影院：西安奥斯卡赛高影城</p>
+					<p>影厅：震撼厅8厅</p>
+					<p>场次：04-26(周二) 18:20</p>
+					<p>座位：还未选择座位</p>
+				</div>
+			</div>
+			<div class="buy">
+				<p>优惠：学生半价</p>
+				<p>总计：￥0元</p>
+				<p>输入取票手机号：<input class="input" type="text"></p>
+				<a href="#"><button type="button" onclick="click()">完成选座</button></a>
 			</div>
 		</div>
 	</div>
+</div>
 </body>
 </html>
