--- a/Movie_Web/Test/1.html
+++ b/Movie_Web/Test/1.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+<HTML>
+<script>
+	function clicke(){
+		alert("事件");
+	}
+</script>
+<table>
+	<tr>
+		<td><input type="button" onClick="clicke()" value="Button1"/></td>
+		<td><input type="button"  value="Button2"/></td>
+	</tr>
+</table>
+</HTML>
