--- a/Movie_Web/Test/2.html
+++ b/Movie_Web/Test/2.html
@@ -1,10 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta charset="UTF-8">
-	<title>Title</title>
+	<title></title>
+	<script type="text/javascript">
+		function change() {
+			document.getElementsByClassName("img1").src = "../image/2.jpg";
+		}
+	</script>
 </head>
 <body>
-
+<img class="img1" src="../image/1.jpg" alt="" onclick="return change()" />
 </body>
 </html>
